# avr-cmake-template

./: .gitignore  CMakeLists.txt  readme.md
cmake/: Toolchain.cmake
example/: .clangd  CMakeLists.txt
src/: main.c
